--- a/apps/templates/dashboard/facility-form.html
+++ b/apps/templates/dashboard/facility-form.html
@@ -37,6 +37,10 @@
             {{ form.latitude }}
           </div>
           <div class="form-group">
+            <label>Location</label>
+            {{ form.location }}
+          </div>
+          <div class="form-group">
             <label>Description</label>
             <br>
             {{form.media}}
