--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -16,6 +16,12 @@
                         <p>Account Management</p>
                     </a>
                 </li>
+                <li class="{% if 'staduim' in segment %} active {% endif %}">
+                    <a href="/dashboard/stadium/list">
+                        <i class="tim-icons icon-atom"></i>
+                        <p>Stadium Management</p>
+                    </a>
+                </li>
                 <li class="{% if 'facility' in segment %} active {% endif %}">
                     <a href="/dashboard/facility/list">
                         <i class="tim-icons icon-atom"></i>
