--- a/apps/templates/dashboard/facility.html
+++ b/apps/templates/dashboard/facility.html
@@ -40,16 +40,16 @@
                       <button class="btn btn-primary btn-link btn-lock-info" data-id="{{ facility.id }}">Show Lock Status</button>
                     </td>
                     <td class="td-actions text-center">
-                      <button type="button" rel="tooltip" class="btn btn-warning btn-link btn-icon btn-sm btn-price" data-id="{{ facility.id }}">
+                      <button type="button" rel="tooltip" class="btn btn-warning btn-link btn-icon btn-sm btn-price" data-id="{{ facility.id }}" data-toggle="tooltip" data-placement="top" title="Set Price">
                         <i class="tim-icons icon-coins"></i>
                       </button>
-                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm btn-lock" data-id="{{ facility.id }}">
+                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm btn-lock" data-id="{{ facility.id }}" data-toggle="tooltip" data-placement="top" title="Lock">
                         <i class="tim-icons icon-lock-circle"></i>
                       </button>
-                      <button type="button" rel="tooltip" class="btn btn-success btn-link btn-icon btn-sm btn-edit" data-id="{{ facility.id }}">
+                      <button type="button" rel="tooltip" class="btn btn-success btn-link btn-icon btn-sm btn-edit" data-id="{{ facility.id }}" data-toggle="tooltip" data-placement="top" title="Edit">
                         <i class="tim-icons icon-settings"></i>
                       </button>
-                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm btn-delete" data-toggle="modal" data-target="#deleteModal" data-id="{{ facility.id }}">
+                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm btn-delete" data-toggle="modal" data-target="#deleteModal" data-id="{{ facility.id }}" data-toggle="tooltip" data-placement="top" title="Delete">
                         <i class="tim-icons icon-simple-remove"></i>
                       </button>
                   </td>
