--- a/apps/templates/dashboard/stadium.html
+++ b/apps/templates/dashboard/stadium.html
@@ -39,10 +39,10 @@
                     <td class="text-center">{{ stadium.latitude }}</td>
                     <td class="text-center">{{ stadium.location }}</td>
                     <td class="td-actions text-center">
-                      <button type="button" rel="tooltip" class="btn btn-success btn-link btn-icon btn-sm btn-edit" data-id="{{ stadium.id }}">
+                      <button type="button" rel="tooltip" class="btn btn-success btn-link btn-icon btn-sm btn-edit" data-id="{{ stadium.id }}" data-toggle="tooltip" data-placement="top" title="Edit">
                         <i class="tim-icons icon-settings"></i>
                       </button>
-                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm btn-delete" data-toggle="modal" data-target="#deleteModal" data-id="{{ stadium.id }}">
+                      <button type="button" rel="tooltip" class="btn btn-danger btn-link btn-icon btn-sm btn-delete" data-toggle="modal" data-target="#deleteModal" data-id="{{ stadium.id }}" data-toggle="tooltip" data-placement="top" title="Delete">
                         <i class="tim-icons icon-simple-remove"></i>
                       </button>
                   </td>
