--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -9,7 +9,7 @@
                             <span class="navbar-toggler-bar bar3"></span>
                         </button>
                     </div>
-                    <a class="navbar-brand" href="javascript:void(0)">Dashboard</a>
+                    <img class="navbar-brand" style="width: 150px;" src="{{ ASSETS_ROOT }}/img/logo_white.png" alt="WSC">
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                         aria-expanded="false" aria-label="Toggle navigation">
