--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -10,7 +10,7 @@
                     </button>
                 </div>
                 <a class="navbar-brand" href="/dashboard/account/list">
-                    Home
+                    <img class="navbar-brand" style="width: 150px;" src="{{ ASSETS_ROOT }}/img/logo_white.png" alt="WSC">
                 </a>
             </div>
             {% comment %} <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
