--- a/apps/static/assets/css/black-dashboard.css
+++ b/apps/static/assets/css/black-dashboard.css
@@ -33,7 +33,7 @@
   --gray-dark: #32325d;
   --light: #ced4da;
   --lighter: #e9ecef;
-  --primary: #e14eca;
+  --primary: #c8e849;
   --secondary: #f4f5f7;
   --success: #00f2c3;
   --info: #1d8cf8;
@@ -151,7 +151,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #e14eca;
+  color: #c8e849;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -1798,8 +1798,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color: #c8e849;
+  border-color: #c8e849;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08); }
   .btn-primary:hover {
     color: #ffffff;
@@ -1809,8 +1809,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08), 0 0 0 0 rgba(230, 105, 210, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #ffffff;
-    background-color: #e14eca;
-    border-color: #e14eca; }
+    background-color: #c8e849;
+    border-color: #c8e849; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #ffffff;
@@ -2085,22 +2085,22 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0 rgba(38, 38, 38, 0.5); }
 
 .btn-outline-primary {
-  color: #e14eca;
-  border-color: #e14eca; }
+  color: #c8e849;
+  border-color: #c8e849; }
   .btn-outline-primary:hover {
     color: #ffffff;
-    background-color: #e14eca;
-    border-color: #e14eca; }
+    background-color: #c8e849;
+    border-color: #c8e849; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0 rgba(225, 78, 202, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #e14eca;
+    color: #c8e849;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #ffffff;
-    background-color: #e14eca;
-    border-color: #e14eca; }
+    background-color: #c8e849;
+    border-color: #c8e849; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0 rgba(225, 78, 202, 0.5); }
@@ -2338,7 +2338,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #e14eca;
+  color: #c8e849;
   text-decoration: none; }
   .btn-link:hover {
     color: #c221a9;
@@ -2574,7 +2574,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #ffffff;
     text-decoration: none;
-    background-color: #e14eca; }
+    background-color: #c8e849; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -2852,8 +2852,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #ffffff;
-    border-color: #e14eca;
-    background-color: #e14eca;
+    border-color: #c8e849;
+    background-color: #c8e849;
     box-shadow: none; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: none, none; }
@@ -2861,8 +2861,8 @@ input[type="button"].btn-block {
     border-color: rgba(50, 151, 211, 0.25); }
   .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
     color: #ffffff;
-    background-color: #e14eca;
-    border-color: #e14eca;
+    background-color: #c8e849;
+    border-color: #c8e849;
     box-shadow: none; }
   .custom-control-input:disabled ~ .custom-control-label {
     color: #6c757d; }
@@ -2902,8 +2902,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23ffffff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #e14eca;
-  background-color: #e14eca;
+  border-color: #c8e849;
+  background-color: #c8e849;
   box-shadow: none; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -2968,7 +2968,7 @@ input[type="button"].btn-block {
   .custom-select:focus {
     border-color: rgba(50, 151, 211, 0.25);
     outline: 0;
-    box-shadow: inset 0 1px 2px rgba(34, 42, 66, 0.075), 0 0 0 0 #e14eca; }
+    box-shadow: inset 0 1px 2px rgba(34, 42, 66, 0.075), 0 0 0 0 #c8e849; }
     .custom-select:focus::-ms-value {
       color: rgba(255, 255, 255, 0.8);
       background-color: transparent; }
@@ -3072,7 +3072,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #e14eca;
+    background-color: #c8e849;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(34, 42, 66, 0.1);
@@ -3098,7 +3098,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #e14eca;
+    background-color: #c8e849;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(34, 42, 66, 0.1);
@@ -3126,7 +3126,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0;
     margin-left: 0;
-    background-color: #e14eca;
+    background-color: #c8e849;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(34, 42, 66, 0.1);
@@ -3211,7 +3211,7 @@ input[type="button"].btn-block {
       border-color: transparent; }
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
-    color: #e14eca;
+    color: #c8e849;
     border-color: #e3e3e3 #e3e3e3 #27293d; }
   .nav-tabs .dropdown-menu {
     margin-top: -0.0625rem;
@@ -3224,7 +3224,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #ffffff;
-  background-color: #e14eca; }
+  background-color: #c8e849; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3733,8 +3733,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca; }
+  background-color: #c8e849;
+  border-color: #c8e849; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3799,7 +3799,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #ffffff;
-  background-color: #e14eca; }
+  background-color: #c8e849; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #ffffff;
     background-color: #d725bb; }
@@ -3954,7 +3954,7 @@ input[type="button"].btn-block {
     color: inherit; }
 
 .alert-primary {
-  color: #e14eca;
+  color: #c8e849;
   background-color: #e66ad2;
   border-color: #e66ad2; }
   .alert-primary hr {
@@ -4083,7 +4083,7 @@ input[type="button"].btn-block {
   color: #ffffff;
   text-align: center;
   white-space: nowrap;
-  background-color: #e14eca;
+  background-color: #c8e849;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -4146,8 +4146,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #ffffff;
-    background-color: #e14eca;
-    border-color: #e14eca; }
+    background-color: #c8e849;
+    border-color: #c8e849; }
 
 .list-group-horizontal {
   flex-direction: row; }
@@ -4928,7 +4928,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #e14eca !important; }
+  background-color: #c8e849 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -5060,7 +5060,7 @@ button.bg-darker:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #e14eca !important; }
+  border-color: #c8e849 !important; }
 
 .border-secondary {
   border-color: #f4f5f7 !important; }
@@ -8198,7 +8198,7 @@ button.bg-darker:focus {
   color: #ffffff !important; }
 
 .text-primary {
-  color: #e14eca !important; }
+  color: #c8e849 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #c221a9 !important; }
@@ -8651,11 +8651,11 @@ a.text-darker:hover, a.text-darker:focus {
     margin-left: 30px !important; }
 
 .btn-primary {
-  background: #e14eca;
-  background-image: linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca);
+  background: #c8e849;
+  background-image: linear-gradient(to bottom left, #c8e849, #9dbf30, #c8e849);
   background-size: 210% 210%;
   background-position: top right;
-  background-color: #e14eca;
+  background-color: #c8e849;
   transition: all 0.15s ease;
   box-shadow: none;
   color: #ffffff; }
@@ -8663,9 +8663,9 @@ a.text-darker:hover, a.text-darker:focus {
     background-position: bottom left;
     transition: 0.3s ease-in-out; }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary:active:focus, .btn-primary:active:hover, .btn-primary.active:focus, .btn-primary.active:hover {
-    background-color: #ba54f5 !important;
-    background-image: linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-    background-image: -moz-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
+    background-color: #9dbf30 !important;
+    background-image: linear-gradient(to bottom left, #c8e849, #9dbf30, #c8e849) !important;
+    background-image: -moz-linear-gradient(to bottom left, #c8e849, #9dbf30, #c8e849) !important;
     color: #ffffff;
     box-shadow: none; }
   .btn-primary:active {
@@ -8683,29 +8683,29 @@ a.text-darker:hover, a.text-darker:focus {
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:active,
   fieldset[disabled] .btn-primary.active {
-    background-color: #e14eca;
-    border-color: #e14eca; }
+    background-color: #c8e849;
+    border-color: #c8e849; }
   .btn-primary.btn-simple {
-    color: #e14eca;
-    border-color: #e14eca;
+    color: #c8e849;
+    border-color: #c8e849;
     background: transparent; }
     .btn-primary.btn-simple:hover, .btn-primary.btn-simple:focus, .btn-primary.btn-simple:active, .btn-primary.btn-simple:not(:disabled):not(.disabled):active {
-      color: #e14eca;
-      border-color: #e14eca;
+      color: #c8e849;
+      border-color: #c8e849;
       background-color: transparent !important;
       background-image: none !important;
       box-shadow: none; }
     .btn-primary.btn-simple.active {
-      border-color: #e14eca !important; }
+      border-color: #c8e849 !important; }
       .btn-primary.btn-simple.active:hover, .btn-primary.btn-simple.active:focus, .btn-primary.btn-simple.active:active, .btn-primary.btn-simple.active:not(:disabled):not(.disabled):active {
         color: #ffffff;
-        border-color: #e14eca;
-        background-image: linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-        background-image: -moz-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-        background-color: #ba54f5 !important;
+        border-color: #c8e849;
+        background-image: linear-gradient(to bottom left, #c8e849, #9dbf30, #c8e849) !important;
+        background-image: -moz-linear-gradient(to bottom left, #c8e849, #9dbf30, #c8e849) !important;
+        background-color: #9dbf30 !important;
         box-shadow: none; }
   .btn-primary.btn-link {
-    color: #e14eca; }
+    color: #c8e849; }
     .btn-primary.btn-link:hover, .btn-primary.btn-link:focus, .btn-primary.btn-link:active {
       background-color: transparent !important;
       background-image: none !important;
@@ -8975,7 +8975,7 @@ a.text-darker:hover, a.text-darker:focus {
   background-color: #ffffff;
   transition: all 0.15s ease;
   box-shadow: none;
-  color: #e14eca; }
+  color: #c8e849; }
   .btn-neutral.animation-on-hover:hover {
     background-position: bottom left;
     transition: 0.3s ease-in-out; }
@@ -9027,10 +9027,10 @@ a.text-darker:hover, a.text-darker:focus {
   .show > .btn-neutral.dropdown-toggle:focus,
   .show > .btn-neutral.dropdown-toggle:hover {
     background-color: #ffffff;
-    color: #ba54f5;
+    color: #9dbf30;
     box-shadow: none; }
   .btn-neutral:hover, .btn-neutral:focus {
-    color: #ba54f5; }
+    color: #9dbf30; }
     .btn-neutral:hover:not(.nav-link), .btn-neutral:focus:not(.nav-link) {
       box-shadow: none; }
   .btn-neutral.btn-simple {
@@ -9557,14 +9557,14 @@ fieldset[disabled]
   font-size: 0.75rem;
   transition: color 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out; }
   .form-control:focus {
-    border-color: #e14eca;
+    border-color: #c8e849;
     background-color: transparent;
     box-shadow: none; }
     .form-control:focus + .input-group-append .input-group-text,
     .form-control:focus ~ .input-group-append .input-group-text,
     .form-control:focus + .input-group-prepend .input-group-text,
     .form-control:focus ~ .input-group-prepend .input-group-text {
-      border: 1px solid #e14eca;
+      border: 1px solid #c8e849;
       border-left: none;
       background-color: transparent; }
   .has-success .form-control,
@@ -9809,7 +9809,7 @@ img {
   color: #ffffff; }
 
 .modal.modal-primary .modal-content {
-  background-color: #e14eca;
+  background-color: #c8e849;
   color: #ffffff; }
 
 .modal.modal-primary .modal-body p {
@@ -10431,7 +10431,7 @@ img {
   .navbar.bg-dark {
     background: #222a42 !important; }
   .navbar.bg-primary {
-    background-color: #e14eca !important; }
+    background-color: #c8e849 !important; }
   .navbar.bg-warning {
     background-color: #ff8d72 !important; }
   .navbar.bg-info {
@@ -10700,10 +10700,10 @@ h1, h2, h3, h4, h5, h6 {
   color: rgba(255, 255, 255, 0.8); }
 
 a {
-  color: #ba54f5;
+  color: #9dbf30;
   font-weight: 300; }
   a:hover, a:focus {
-    color: #e14eca; }
+    color: #c8e849; }
 
 h1, .h1 {
   line-height: 1.05;
@@ -10781,10 +10781,10 @@ p {
     font-size: 0.75rem;
     text-transform: uppercase; }
   .blockquote.blockquote-primary {
-    border-color: #e14eca;
-    color: #e14eca; }
+    border-color: #c8e849;
+    color: #c8e849; }
     .blockquote.blockquote-primary small {
-      color: #e14eca; }
+      color: #c8e849; }
   .blockquote.blockquote-danger {
     border-color: #fd5d93;
     color: #fd5d93; }
@@ -10825,7 +10825,7 @@ hr {
   background-color: #1d8cf8; }
 
 .table > tbody > tr.table-primary > td {
-  background-color: #e14eca; }
+  background-color: #c8e849; }
 
 .table > tbody > tr.table-warning > td {
   background-color: #ff8d72; }
@@ -10994,7 +10994,7 @@ table.tablesorter thead tr .headerSortDown {
 .form-check input[type="checkbox"]:checked + .form-check-sign::before,
 .form-check input[type="checkbox"]:checked + .form-check-sign::before {
   border: none;
-  background-color: #e14eca; }
+  background-color: #c8e849; }
 
 .form-check .form-check-sign::after {
   font-family: 'nucleo';
@@ -11062,14 +11062,14 @@ table.tablesorter thead tr .headerSortDown {
 .form-check-radio input[type="radio"]:checked + .form-check-sign::after {
   width: 6px;
   height: 6px;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color: #c8e849;
+  border-color: #c8e849;
   top: 9px;
   left: 6px;
   opacity: 1; }
 
 .form-check-radio input[type="radio"]:checked + .form-check-sign::before {
-  border-color: #e14eca; }
+  border-color: #c8e849; }
 
 .form-check-radio input[type="radio"]:checked + .form-check-sign::after {
   opacity: 1; }
@@ -11298,8 +11298,8 @@ table.tablesorter thead tr .headerSortDown {
 
 .sidebar,
 .off-canvas-sidebar {
-  background: #ba54f5;
-  background: linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
+  background: #9dbf30;
+  background: linear-gradient(0deg, #9dbf30 0%, #c8e849 100%);
   height: calc(100vh - 90px);
   width: 230px;
   position: fixed;
@@ -11646,7 +11646,7 @@ table.tablesorter thead tr .headerSortDown {
   float: right;
   width: 100%;
   min-height: 100vh;
-  border-top: 2px solid #e14eca;
+  border-top: 2px solid #c8e849;
   background: linear-gradient(#1e1e2f, #1e1e24);
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1); }
   .main-panel[data="blue"] {
@@ -11654,7 +11654,7 @@ table.tablesorter thead tr .headerSortDown {
   .main-panel[data="green"] {
     border-top: 2px solid #00f2c3; }
   .main-panel[data="primary"] {
-    border-top: 2px solid #e14eca; }
+    border-top: 2px solid #c8e849; }
   .main-panel > .content {
     padding: 78px 30px 30px 280px;
     min-height: calc(100vh - 70px); }
@@ -12106,11 +12106,11 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 .bd-docs table .datepicker thead th,
 .bd-docs table .datepicker table thead th,
 .bd-docs table .datepicker .tim-icons {
-  color: #e14eca; }
+  color: #c8e849; }
 
 .bd-docs .bd-example .picker-switch .tim-icons,
 .bd-docs table .picker-switch .tim-icons {
-  color: #e14eca; }
+  color: #c8e849; }
 
 .bd-docs .footer .container-fluid > nav {
   display: inline-block; }
@@ -12469,9 +12469,9 @@ code {
 .input-group-focus .input-group-prepend .input-group-text,
 .input-group-focus .input-group-append .input-group-text {
   background-color: #ffffff;
-  border-color: #e14eca;
+  border-color: #c8e849;
   background-color: transparent;
-  border-color: #e14eca; }
+  border-color: #c8e849; }
 
 .input-group-focus.no-border .input-group-prepend .input-group-text,
 .input-group-focus.no-border .input-group-append .input-group-text {
@@ -12876,7 +12876,7 @@ Copyright (c) 2015 Daniel Eden
     color: #222a42;
     border-color: rgba(29, 37, 59, 0.5); }
     .white-content .form-control:focus {
-      border-color: #e14eca; }
+      border-color: #c8e849; }
   .white-content .form-group.no-border .form-control,
   .white-content .form-group.no-border .form-control + .input-group-prepend .input-group-text,
   .white-content .form-group.no-border .form-control + .input-group-append .input-group-text,
@@ -12931,7 +12931,7 @@ Copyright (c) 2015 Daniel Eden
   .white-content .input-group-focus .input-group-prepend .input-group-text,
   .white-content .input-group-focus .input-group-append .input-group-text,
   .white-content .input-group-focus .form-control {
-    border-color: #e14eca; }
+    border-color: #c8e849; }
   .white-content .input-group-focus.no-border .input-group-prepend .input-group-text,
   .white-content .input-group-focus.no-border .input-group-append .input-group-text {
     background-color: rgba(222, 222, 222, 0.5); }
@@ -13089,7 +13089,7 @@ Copyright (c) 2015 Daniel Eden
       color: #222a42;
       border-color: rgba(29, 37, 59, 0.2); }
       .card.card-white .form-control:focus {
-        border-color: #e14eca; }
+        border-color: #c8e849; }
     .card.card-white label:not(.btn) {
       color: #344675; }
     .card.card-white .form-group.no-border .form-control,
@@ -13147,7 +13147,7 @@ Copyright (c) 2015 Daniel Eden
     .card.card-white .input-group-focus .input-group-append .input-group-text,
     .card.card-white .input-group-focus .form-control {
       background-color: #ffffff;
-      border-color: #e14eca; }
+      border-color: #c8e849; }
     .card.card-white .input-group-focus.no-border .input-group-prepend .input-group-text,
     .card.card-white .input-group-focus.no-border .input-group-append .input-group-text {
       background-color: rgba(222, 222, 222, 0.5); }
