--- a/apps/static/assets/css/black-dashboard.css
+++ b/apps/static/assets/css/black-dashboard.css
@@ -12523,16 +12523,12 @@ code {
 textarea.form-control {
   max-width: 100%;
   max-height: 80px;
-  padding: 10px 10px 0 0;
+  padding: 10px 10px 0 10px;
   resize: none;
-  border: none;
   border-bottom: 1px solid #2b3553;
   border-radius: 0;
   line-height: 2; }
-  textarea.form-control:focus, textarea.form-control:active {
-    border-left: none;
-    border-top: none;
-    border-right: none; }
+  textarea.form-control:focus, textarea.form-control:active {}
 
 .has-success.form-group .form-control,
 .has-success.form-group.no-border .form-control,
