--- a/apps/templates/dashboard/facility.html
+++ b/apps/templates/dashboard/facility.html
@@ -33,7 +33,7 @@
                     <td class="text-center">{{ facility.name }}</td>
                     <td class="text-center" style="display:flex;flex-wrap:wrap;">
                       {% for cover_image in facility.cover_image_list %}
-                      <img style="width: 49%;" src="{{ MEDIA_URL }}{{ cover_image }}">
+                      <img style="width: 49%;" src="{{ cover_image }}">
                       {% endfor %}
                     </td>
                     <td class="td-actions text-center">
