alert full_date_price

--- a/apps/templates/dashboard/price.html
+++ b/apps/templates/dashboard/price.html
@@ -35,7 +35,7 @@
                   <tr>
                     <td>{{ price.court_type }}</td>
                     <td>{{ price.day_type }}</td>
-                    <td>{{ price.full_day_price }}</td>
+                    <td>{{ price.full_day_price|default_if_none:"" }}</td>
                     <td>{{ price.normal_hourly_price }}</td>
                     <td>{{ price.peek_hourly_price }}</td>
                     <td>{{ price.peek_time_from|default_if_none:"" }} - {{ price.peek_time_to|default_if_none:"" }}</td>
